[gd_scene load_steps=10 format=3 uid="uid://bd2vxy7fsehja"]

[ext_resource type="FontFile" uid="uid://cu3me2auyfot7" path="res://assets/fonts/Kenney Future Square.ttf" id="1_2tj76"]
[ext_resource type="Script" uid="uid://jeg4wds4um1c" path="res://scenes/un_packer.gd" id="1_ilokp"]
[ext_resource type="Texture2D" uid="uid://cjgfobyesyul0" path="res://assets/PickPackerIcon.png" id="2_tsp2v"]
[ext_resource type="PackedScene" uid="uid://chp601jyg2ttr" path="res://scenes/texture_saver.tscn" id="3_tsp2v"]
[ext_resource type="FontFile" uid="uid://0e0mkt2ft2rr" path="res://assets/fonts/Kenney Future.ttf" id="5_4edfo"]
[ext_resource type="StyleBox" uid="uid://cbe26fcrx0k7h" path="res://styles/transparent_panel.tres" id="5_rh8rl"]
[ext_resource type="Texture2D" uid="uid://bgd2mx3v7rwxu" path="res://assets/import.png" id="6_v7dvm"]
[ext_resource type="Texture2D" uid="uid://3qvalxwnyvd0" path="res://assets/return.png" id="7_b5l1x"]
[ext_resource type="Texture2D" uid="uid://e45dwm1wysgy" path="res://assets/whitecolor.png" id="7_rh8rl"]

[node name="UnPacker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ilokp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.20392157, 0.20392157, 0.20392157, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -345.0
offset_top = 15.0
offset_right = -25.0
offset_bottom = 77.0
grow_horizontal = 0
theme_override_colors/font_shadow_color = Color(0.7882353, 0.7882353, 0.7882353, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_2tj76")
theme_override_font_sizes/font_size = 54
text = "PickPacker"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="Label"]
modulate = Color(0.79, 0.79, 0.79, 0.2509804)
layout_mode = 0
offset_left = -58.0
offset_top = 3.0
offset_right = 198.0
offset_bottom = 259.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_tsp2v")

[node name="TextureRect" type="TextureRect" parent="Label"]
layout_mode = 0
offset_left = -60.0
offset_right = 196.0
offset_bottom = 256.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_tsp2v")

[node name="UnpackedImages" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -652.0
offset_top = -214.0
offset_right = 72.00037
offset_bottom = 370.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.9, 0.9)

[node name="HBoxContainer" type="HBoxContainer" parent="UnpackedImages"]
layout_mode = 2

[node name="Red" parent="UnpackedImages/HBoxContainer" instance=ExtResource("3_tsp2v")]
layout_mode = 2

[node name="Green" parent="UnpackedImages/HBoxContainer" instance=ExtResource("3_tsp2v")]
layout_mode = 2
channeltouse = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="UnpackedImages"]
layout_mode = 2

[node name="Blue" parent="UnpackedImages/HBoxContainer2" instance=ExtResource("3_tsp2v")]
layout_mode = 2
channeltouse = 2

[node name="Alpha" parent="UnpackedImages/HBoxContainer2" instance=ExtResource("3_tsp2v")]
layout_mode = 2
channeltouse = 3

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -214.0
offset_right = 475.0
offset_bottom = 293.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("5_rh8rl")

[node name="ImportImage" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/ImportImage"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="PanelContainer/ImportImage/HBoxContainer"]
layout_mode = 2
tooltip_text = "Open an image from this PC."
focus_mode = 0
theme_override_constants/icon_max_width = 35
theme_override_fonts/font = ExtResource("5_4edfo")
text = "
"
icon = ExtResource("7_b5l1x")
icon_alignment = 1

[node name="Spacer" type="Control" parent="PanelContainer/ImportImage/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ImportButton" type="Button" parent="PanelContainer/ImportImage/HBoxContainer"]
layout_mode = 2
tooltip_text = "Open an image from this PC."
focus_mode = 0
theme_override_constants/icon_max_width = 35
theme_override_fonts/font = ExtResource("5_4edfo")
text = "Import
"
icon = ExtResource("6_v7dvm")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/ImportImage"]
custom_minimum_size = Vector2(450, 450)
layout_mode = 2
texture = ExtResource("7_rh8rl")
expand_mode = 2

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg", "*.JPG", "*.svg", "*.bmp", "*.tga", "*.webp")
use_native_dialog = true

[connection signal="pressed" from="PanelContainer/ImportImage/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="PanelContainer/ImportImage/HBoxContainer/ImportButton" to="." method="_on_import_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
